manifests/simple-admission.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: simple-admission
  name: simple-admission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-admission
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simple-admission
    spec:
      containers:
      - name: simple-admission
        image: fdns/simple-admission:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8443
        volumeMounts:
        - name: admission-certs
          mountPath: /certs
          readOnly: true
        resources:
          requests:
            memory: 50Mi
            cpu: 25m
          limits:
            memory: 100Mi
            cpu: 100m
      volumes:
      - name: admission-certs
        secret:
          secretName: admission-certs
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: simple-admission
  name: simple-admission
spec:
  ports:
  - name: 443-8443
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: simple-admission
  type: ClusterIP
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
 name: simple-admission.default.cluster.local
webhooks:
- name: simple-admission.default.cluster.local
  clientConfig:
    service:
      name: simple-admission
      namespace: default
      path: "/validate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lVTlowckVHbFNFMFdQVkpsWERlQ21wL21xNFJBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0d6RVpNQmNHQTFVRUF4TVFjMmx0Y0d4bExXRmtiV2x6YzJsdmJqQWVGdzB5TVRBek1qRXhPVEE0TURCYQpGdzB5TmpBek1qQXhPVEE0TURCYU1Cc3hHVEFYQmdOVkJBTVRFSE5wYlhCc1pTMWhaRzFwYzNOcGIyNHdnZ0VpCk1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRFRoWGs4Y0N5NnBlV3pwUlpqNS8rQU9YSEoKbGMxRzhuRWFTNUIvcHUxeGwxWThQVkppSGF1dVpxSjdIV21kbmhQY2w0dFRaaUNGemZWSmg1VlVDODJrMS9LZwpOdXNCcVpaWEFSME [...]
  rules:
  - apiGroups: ["batch"]
    apiVersions: ["v1"]
    resources: ["jobs"]
    operations: ["CREATE"]
    scope: "*"
  #namespaceSelector:
  #  matchExpressions:
  #  - key: name
  #    operator: In
  #    values: ["default"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  failurePolicy: Fail
